--- a/index.html
+++ b/index.html
@@ -1,33 +1,27 @@
 <head>
     <title>Meet the WebGL</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/3.4.2/gl-matrix.js" integrity="sha512-C36Mc3LuY9RCMgT8A3Z5i+5fYr1/9yVxODdw2LdSnhIgI6Pg3LmmgJL3df+KghqEouKxRBTPK9J+FTZMcdtbGw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
-<body onload="start()">
+<body>
     <canvas id="glcanvas" width="640" height="480">
         You're browser doesn't appear to support HTML5 <code>&lt;canvas&gt;</code> element.
     </canvas>
-    <script>
-        let gl;
+    <script>        
+        function main(){
+            const canvas=document.querySelector("#glcanvas")
+            const gl = initWebGL(canvas);
 
-        function start(){
-            const canvas=document.getElementById("glcanvas");
-
-            gl = initWebGL(canvas);
-
-            if(gl){
-                gl.clearColor(0.0, 0.0, 0.0, 1.0);
-                gl.enable(gl.DEPTH_TEST);
-                gl.depthFunc(gl.LEQUAL);
-                gl.clear(gl.COLOR_BUFFER_BIT|gl.DEPTH_BUFFER_BIT);
-            }
+            gl.clearColor(0.0, 0.0, 0.0, 1.0);
+            gl.clear(gl.COLOR_BUFFER_BIT);
         }
 
         function initWebGL(canvas){
-            gl=null;
+            let gl=null;
 
             try {
                 gl=canvas.getContext('webgl')||canvas.getContext('experimental-webgl');
             } catch (error) {
-                if(!gl){
+                if(gl===null){
                     alert("You're browser doesn't support WebGL");
                     gl=null;
                 }
@@ -36,5 +30,7 @@
             return gl;
         }
 
+
+        window.onload=main;
     </script>
 </body>
